--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "utils"]
 	path = utils
-	url = https://github.com/tiagocorreawj/utils.git
+	url = git@github.com:tiagocorreawj/utils.git
